Bug 289582 - Payee View mouse problems
Summary: Payee View mouse problems
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 290548 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-22 12:24 UTC by allan
Modified: 2012-01-06 10:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2011-12-22 12:24:36 UTC
Version:           git master (using KDE 4.6.5) 
OS:                Linux

On Linux Mint 11.

In Payees view, select a payee, then select a different payee.  Then click the delete button at the top.  For me, this brings up a dialog asking if I want to delete the first payee, instead of the second, currently selected, payee.  Then select a different payee, and the delete button asks about the previous payee, etc.

This is fixed temporarily by right clicking the selected payee.  Then, the delete button recognises that payee.  Select another payee and the Delete button problem is back.

Right clicking a payee and selecting Delete works as expected.

I first noticed this when I tried to delete an empty payee and was asked to select another payee for reassignment of transactions when there weren't any to reassign. 
___________________________________________________________

I can confirm this.  I had to add the 'Delete Payee' button to my toolbar first.

I'm under Mageia 1, running KMyMoney 4.6.1 compiled from source.

Doug 


Reproducible: Always

Steps to Reproduce:
1) In Payees view, select a payee, then select a different payee.
2) Then click the delete button at the top.

Actual Results:  
For me, this brings up a dialog asking if I want to delete the first payee, instead of the second, currently selected, payee.  Then select a different payee, and the delete button asks about the previous payee, etc.

This is fixed temporarily by right clicking the selected payee.  Then, the delete button recognises that payee.  Select another payee and the Delete button problem is back.

Right clicking a payee and selecting Delete works as expected.

I first noticed this when I tried to delete an empty payee and was asked to select another payee for reassignment of transactions when there weren't any to reassign. 

Expected Results:  
Selecting a Payee then clicking the Delete button should recognise the current Payee, not the previous one.
Comment 1 Thomas Baumgart 2011-12-22 13:06:51 UTC
Git commit 7e78b52b5937eda341b50c0a93bb73e4a21b1314 by Thomas Baumgart.
Committed on 22/12/2011 at 14:05.
Pushed by tbaumgart into branch 'master'.

BUG: 289582

Synchronize the application's idea of selected payees with
the ones that are really selected in the view.

M  +10   -11   kmymoney/views/kpayeesview.cpp
M  +7    -1    kmymoney/views/kpayeesview.h

http://commits.kde.org/kmymoney/7e78b52b5937eda341b50c0a93bb73e4a21b1314
Comment 2 Thomas Baumgart 2011-12-22 13:17:34 UTC
Git commit c67c92fb2e211fac8bd92d4d7417a883e28964c2 by Thomas Baumgart.
Committed on 22/12/2011 at 14:05.
Pushed by tbaumgart into branch '4.6'.

BUG: 289582

Synchronize the application's idea of selected payees with
the ones that are really selected in the view.
(cherry picked from commit 7e78b52b5937eda341b50c0a93bb73e4a21b1314)

M  +10   -11   kmymoney/views/kpayeesview.cpp
M  +7    -1    kmymoney/views/kpayeesview.h

http://commits.kde.org/kmymoney/c67c92fb2e211fac8bd92d4d7417a883e28964c2
Comment 3 allan 2011-12-22 13:30:22 UTC
Quick work!

That'll do nicely.
Comment 4 Cristian Oneț 2012-01-06 10:31:26 UTC
*** Bug 290548 has been marked as a duplicate of this bug. ***