BUG: 289582

Synchronize the application's idea of selected payees with
the ones that are really selected in the view.
(cherry picked from commit 7e78b52b5937eda341b50c0a93bb73e4a21b1314)